Create First complete version

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,27 @@
 <footer>
-    <p>This is footer tag</p>
-</footer>
+    <div class="footer">
+        <div class="footerLogo">
+            <a href="#"><img src="images/news.png" alt="Logo"></a>
+        </div>
+        <div class="sideFoot">
+            <div class="footDesc">
+                <p>
+                    NOTE : This news website is working complete on <a href="https://newsapi.org/" target="_blank">NEWS API</a>, All the news are coming from this website, I am developer not a journalist, I dont know anything about the news which are displayed <br> <br>
+                </p>
+            </div>
 
+            <div class="footMenu">
+                <a href="mailto: shuklahet2704@gmail.com" target="_blank"><img src="images/gmail.png" alt="EMAIL"></a>
+                <a href="https://www.linkedin.com/in/het--shukla/" target="_blank"><img src="images/linkedin.png" alt="LINKEDIN"></a>
+                <a href="https://het-shukla.github.io/PORTFOLIO/#" target="_blank"><img src="images/web.png" alt="WEBSITE"></a>
+            </div>
+
+            <div class="final">
+                <p id="last">©HET-SHUKLA | 2023</p>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
+<script src="scripts/script.js"></script>
 </html>
