--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../public/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" type="image/x-icon" href="fevicon/favicon.ico">
     <title>WORLD NEWS</title>
 </head>
 <body>
+
+    <nav>
+        <div class="logo">
+            <a href="/"><img src="images/news.png" alt="Logo"></a>
+        </div>
+        <div class="menu">
+            <ul>
+                <div><li><a href="/">Home</a></li></div>
+                <div><li><a href="/about">About us</a></li></div>
+                <div><li><a href="/contact">Contact us</a></li></div>
+            </ul>
+        </div>
+        <div class="empty"></div>
+    </nav>
+
+    
