--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,148 @@
 <%- include("partials/header.ejs"); -%>
 
-<nav>
-    <div>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Home</a></li>
-            <li><a href="">Home</a></li>
-            <li><a href="">Home</a></li>
-            <li><a href="">Home</a></li>
-        </ul>
-    </div>
-</nav>
+<div class="search">
+    <form action="/search" method="GET">
+        <div class="box">
+            <input type="text" name="keyword" id="query" placeholder="Search news">
+        </div>
+        <div class="icon">
+            <img src="images/search.png" alt="Search Icon">
+        </div>
+        <input type="submit" id="searchClick">
+    </form>
+</div>
 
+<div class="filter">
+    <div class="category">
+        <form action="/category" method="GET">
+            <div>
+                <input class="gen" type="submit" name="category" value="Business">
+            </div>
+            <div>
+                <input class="gen" type="submit" name="category" value="Entertainment">
+            </div>
+            <div>
+                <input class="gen" id="general" type="submit" name="category" value="General">
+            </div>
+            <div>
+                <input class="gen" type="submit" name="category" value="Health">
+            </div>
+            <div>
+                <input class="gen" type="submit" name="category" value="Science">
+            </div>
+            <div>
+                <input class="gen" type="submit" name="category" value="Sports">
+            </div>
+            <div>
+                <input class="gen" type="submit" name="category" value="Technology">
+            </div>
+        </form>
+    </div>
+
+    <div class="country">
+        <form action="/country" method="GET">
+            <label for="selectCountry">Select Country</label>
+            <select name="countries" id="con">
+                <% if(locals.country && locals.flags) { %>
+                    <% for(let i=0;i<country.length;i++) { %>
+                        <option value="<%= flags[i] %>" <%= flags[i] === con ? 'selected' : '' %> > <%= country[i] %> </option>
+                    <% } } %>
+            </select>
+            <input type="submit" value="Submit" id="countrySubmit">
+        </form>
+    </div>
+</div>
+
+<div class="topStory">
+    <div id="title1">
+        <h1>Top Stories from <%= (con).toUpperCase() %> - <%= cat %></h1>
+    </div>
+    <div class="storyCard">
+        <% if(locals.response) { %>
+            <% for(let i=0;i<3;i++) { %>
+                <div class="card">
+                    <div class="newsImgDiv">
+                        <img class="newsImg" src="<%= response.articles[i].urlToImage %>" alt="News Image">
+                    </div>
+                    <div class="sourceDiv">
+                        <% if(response.articles[i].source.name == null) { %>
+                            <p class="source"> Unknown </p>
+                        <%} else {%>
+                            <p class="source"> <%= response.articles[i].source.name %> </p>
+                        <% } %>
+                    </div>
+                    <div class="titleDiv">
+                        <p class="title"> <%= response.articles[i].title %> </p>
+                    </div>
+                    <div class="descDiv">
+                        <% if((response.articles[i].description != null)) { %>
+                            <p class="desc"> <%= (response.articles[i].description).substring(0,200)+`... ` %><a href="<%= response.articles[i].url %>" target="_blank" class="read">Read more</a> 
+                            </p>
+                        <% } else { %>
+                            <p class="desc"> <%= `... ` %><a href="<%= response.articles[i].url %>" target="_blank" class="read">Read more</a> 
+                            </p>
+                        <% } %>
+                    </div>
+                </div>
+            <% } %>
+        <% } %>
+    </div>
+</div>
+
+<div class="moreStory">
+    <div id="title2">
+        <h1>More Stories from <%= (con).toUpperCase() %> - <%= cat %></h1>
+    </div>
+    <div class="moreStoryCard">
+        <% if(locals.response) { %>
+            <% for(let i=3;i<(response.articles.length);i++) { %>
+                <div class="moreCard">
+                    <div class="leftSideCon">
+                        <div class="moreSourceDiv">
+                            <% if(response.articles[i].source.name == null) { %>
+                                <p class="moreSource"> Unknown </p>
+                            <%} else {%>
+                                <p class="moreSource"> <%= response.articles[i].source.name %> </p>
+                            <% } %>
+                        </div>
+                        <div class="moreDiv">
+                            <p class="more"> <%= response.articles[i].title %> </p>
+                        </div>
+                        <div class="descDiv">
+                            <% if((response.articles[i].description != null)) { %>
+                                <p class="desc"> <%= (response.articles[i].description).substring(0,300)+`... ` %><a href="<%= response.articles[i].url %>" target="_blank" class="read">Read more</a> 
+                                </p>
+                            <% } else { %>
+                                <p class="desc"> <%= `... ` %><a href="<%= response.articles[i].url %>" target="_blank" class="read">Read more</a> 
+                                </p>
+                            <% } %>
+                        </div>
+                    </div>
+                    <div class="moreImgDiv">
+                        <img class="moreImg" src="<%= response.articles[i].urlToImage %>" alt="News Image">
+                    </div>
+                </div>
+            <% } %>
+        <% } %>
+    </div>
+</div>
+
+<script>
+    var cat = "<%= cat %>";
+
+    const buttonsHTML = document.querySelectorAll(".gen");
+
+    buttonsHTML.forEach(button => {
+        if(cat === button.value)
+        {
+            button.classList.add("clickBtn");
+        }
+        else
+        {
+            button.classList.remove("clickBtn");
+        }
+    });
+
+</script>
 
 <%- include("partials/footer.ejs"); -%>
